<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            app:srcCompat="@drawable/icono_inicio"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/tv_modificar"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/campoUsuario"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="44dp"
            android:background="#D6D0D0"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:hint="@string/nombre"
            android:textAlignment="center"
            android:textColor="#070707"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/campoContrasena"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="44dp"
            android:background="#D6D0D0"
            android:ems="10"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnModificaActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="@string/btn_modificar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/btn_cancelar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>